<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AlarmFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:gravity="center"
        android:text="@string/alarm_title"
<<<<<<< HEAD
        android:textSize="40sp"
        android:layout_marginBottom="100dp"/>

    <EditText
        android:id="@+id/time"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/alarm"
        android:textSize="25sp"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/begin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/begin"
            android:textSize="20sp"
            android:layout_marginStart="80dp"/>
        <Button
            android:id="@+id/end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end"
            android:textSize="20sp" />
    </LinearLayout>

=======
        android:textSize="40sp" />

    <Button
        android:id="@+id/set_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/set_alarm"
        android:textSize="25sp"/>
    <Button
        android:id="@+id/cancel_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_alarm"
        android:textSize="25sp" />
>>>>>>> 88101029d059b0dc075f7947d1cdef9bb4092e6c



</LinearLayout>